--- a/_patterns/header/header.css
+++ b/_patterns/header/header.css
@@ -18,12 +18,6 @@
   color: var(--color-white);
 }
 
-h3 {
-  font-weight: normal;
-  color: var(--color-primary-light);
-
-}
-
 .icon-link:hover {
   color: var(--color-primary-light);
 }
@@ -31,4 +25,14 @@ h3 {
 .logo-icon {
   margin: auto;
   width: 200px;
+}
+
+@media only screen and (min-width: 38em) {
+
+  .header-nav {
+    display: block;
+    text-align: right;
+    padding-right: 40px;
+  }
+
 }
